2009-08-06 Mark Doffman <mark.doffman@codethink.co.uk>         Replace use of dbind_emit_signal with direct libdbus         call in application cache update.

Fix for bug:
                http://bugs.freedesktop.org/show_bug.cgi?id=23029

        Fix provided by:
                Mario Lang